# gan-mnist-cifar

./: .gitignore  MANIFEST.in  README.md  build_and_upload.py  create_structure.sh  package_setup_instructions.md  pyproject.toml  quick_test.sh  requirements.txt  setup.py
backup/: __init__.py  aerospike-cellular-analyzer.sh  cli.py  composite_enhanced_metrics_logger.py  enhanced_dcgan_mnist_cifar_for_apple_mps_checkpoints_graceful_v02.py  enhanced_dcgan_mnist_cifar_for_apple_mps_checkpoints_graceful_v02_bk.py  go_cellular_analyzer.py  main.py  py_db.py  test
backup/cellular_analysis_aerospike_aerospike-kubernetes-operator/: analysis_report.md  visualization_data.json
enhanced-dcgan-web/: README.md
enhanced-dcgan-web/backend/: api_client.py  health_check.py  main.py  requirements.txt  start_backend.sh  test_websocket.py  training_integration.py  training_wrapper.py  websocket_manager.py
enhanced-dcgan-web/deployment/: render.yaml
enhanced-dcgan-web/frontend/: package.json  tailwind.config.js
enhanced-dcgan-web/frontend/public/: manifest.json  sw.js
enhanced-dcgan-web/frontend/src/: App.js  index.js
enhanced-dcgan-web/frontend/src/components/: AnalyticsPanel.js  Dashboard.js  InteractiveGeneration.js  LogsPanel.js  ReportsPanel.js  TrainingInterface.js  WebSocketProvider.js
enhanced-dcgan-web/frontend/src/hooks/: useSystemStatus.js  useTrainingStatus.js  useWebSocket.js
enhanced-dcgan-web/frontend/src/services/: api.js
enhanced-dcgan-web/frontend/src/styles/: index.css
enhanced-dcgan-web/mock-backend/: package.json  server.js
enhanced_dcgan_research/: __init__.py  cli.py  composite_enhanced_metrics_logger.py  enhanced_dcgan_mnist_cifar_for_apple_mps_checkpoints_graceful_v02.py  fully_integrated_report_v04.py
generated_reports/: comprehensive_academic_report_cifar10.md  comprehensive_academic_report_mnist.md
generated_reports/cifar10_epoch_200_300/: executive_summary.md
generated_reports/cifar10_epoch_200_300/generated_samples/: README.md
generated_reports/mnist_epoch_20_50/: executive_summary.md
generated_reports/mnist_epoch_20_50/generated_samples/: README.md
