[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enhanced-dcgan-research"
version = "0.1.0"
authors = [
    {name = "Jahidul Arafat", email = "jahidapon@gmail.com"},
]
description = "Enhanced DCGAN Research Framework with Academic Reporting and Advanced Checkpointing"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
keywords = ["dcgan", "gan", "deep-learning", "pytorch", "academic-research"]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "Pillow>=8.0.0",
    "tqdm>=4.60.0",
    "pandas>=1.3.0",
    "seaborn>=0.11.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
tensorboard = ["tensorboard>=2.8.0"]
psutil = ["psutil>=5.8.0"]
dev = ["pytest>=6.0.0", "build>=0.7.0", "twine>=4.0.0"]

[project.urls]
Homepage = "https://github.com/jahidul-arafat/gan-mnist-cifar"
Repository = "https://github.com/jahidul-arafat/gan-mnist-cifar.git"
"Bug Tracker" = "https://github.com/jahidul-arafat/gan-mnist-cifar/issues"

[project.scripts]
enhanced-dcgan = "enhanced_dcgan_research.fully_integrated_report_v04:main"