[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "enhanced-dcgan-research"
version = "0.1.4"
authors = [
    {name = "Jahidul Arafat", email = "jahidapon@gmail.com"},
]
description = "Production-Ready Enhanced DCGAN Research Framework with Multi-Session Analytics and Complete Session Management"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
keywords = ["dcgan", "gan", "deep-learning", "pytorch", "academic-research", "multi-session", "analytics", "checkpointing"]

# CORE DEPENDENCIES - All essential packages included
dependencies = [
    # Deep Learning Framework
    "torch>=2.0.0",
    "torchvision>=0.15.0",

    # Scientific Computing (Essential)
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",

    # Visualization (Essential)
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "Pillow>=8.0.0",

    # Progress & Monitoring (Essential)
    "tqdm>=4.60.0",
    "tensorboard>=2.8.0",

    # System Utilities (Essential for session management)
    "psutil>=5.8.0",

    # Data Science (Essential for analytics)
    "scikit-learn>=1.0.0",

    # Configuration (for YAML configs if needed)
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Web interface support
web = [
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "pydantic>=2.11.5",
    "websocket-client>=1.8.0",
]

# Development tools
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "build>=0.7.0",
    "twine>=4.0.0",
]

# Complete installation with all features
all = [
    "enhanced-dcgan-research[web,dev]"
]

[project.urls]
Homepage = "https://github.com/jahidul-arafat/gan-mnist-cifar"
Repository = "https://github.com/jahidul-arafat/gan-mnist-cifar.git"
"Bug Tracker" = "https://github.com/jahidul-arafat/gan-mnist-cifar/issues"
Documentation = "https://github.com/jahidul-arafat/gan-mnist-cifar/blob/main/README.md"

[project.scripts]
enhanced-dcgan = "enhanced_dcgan_research.cli:main"

[tool.setuptools]
packages = ["enhanced_dcgan_research"]
include-package-data = true

[tool.setuptools.package-data]
enhanced_dcgan_research = ["*.py", "data/*"]